Fixed image-manager images load-spinner position (too low)

--- a/src/sass/components/_image-manager.scss
+++ b/src/sass/components/_image-manager.scss
@@ -125,6 +125,11 @@ mat-dialog-content.fe-image-manager {
       border-radius: 0;
     }
 
+    .fe-loading-spinner {
+      margin-top: 0;
+      margin-bottom: 40px;
+    }
+
     .images-list {
       width: 100%;
       height: 100%;
